--- a/build.gradle
+++ b/build.gradle
@@ -31,14 +31,17 @@ dependencies {
     implementation 'net.serenity-bdd:serenity-junit:3.4.0'
     implementation 'net.serenity-bdd:serenity-cucumber:3.4.0'
     implementation 'net.serenity-bdd:serenity-core:3.4.0'
-    //implementation 'net.serenity-screenplay-rest:3.4.0'
+    implementation group: 'net.serenity-bdd', name: 'serenity-screenplay-rest', version: '3.4.0'
     //implementation 'net.serenity-screenplay-webdriver:3.4.0'
-    //implementation 'net.serenity-screenplay:3.4.0'
-    //implementation 'net.serenity-assertions:3.4.0'
+    implementation group: 'net.serenity-bdd', name: 'serenity-screenplay', version: '3.4.0'
+    //implementation group: 'net.serenity-bdd', name: 'serenity-assertions', version: '3.4.0'
     //implementation 'net.serenity-ensure:3.4.0'
     implementation 'org.slf4j:slf4j-simple:1.7.7'
     implementation 'com.google.guava:guava:19.0'
     implementation group: 'log4j', name: 'log4j', version: '1.2.17'
+    testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '5.3.0'
+    testImplementation group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
+    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
 }
 
 // Para configurar propiedades del comando de ejecucion de pruebas con Gradle
