--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation group: 'net.serenity-bdd', name: 'serenity-screenplay', version: '3.4.0'
     //implementation group: 'net.serenity-bdd', name: 'serenity-assertions', version: '3.4.0'
     //implementation 'net.serenity-ensure:3.4.0'
+    implementation 'com.github.javafaker:javafaker:1.0.2'
     implementation 'org.slf4j:slf4j-simple:1.7.7'
     implementation 'com.google.guava:guava:19.0'
     implementation group: 'log4j', name: 'log4j', version: '1.2.17'
